# har-project-cloud

./: .gitignore  COMMIT_MSG.txt  Dockerfile  README.md  docker-compose.yml  labelled.jsonl  pyproject.toml  test.db  test_inference.sh  test_request.json  test_request_low_conf.json  test_request_valid.json  test_scenarios.sh  window_sample.json  window_sample_new.json
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_activity_events_quality_columns.py  b2c3d4e5f6a7_pose_windows_and_activity_window_id.py  b4c5d6e7f8a9_add_pose_windows_and_window_predictions.py  c5d6e7f8a9b0_add_pose_windows_keypoints_json.py  d6e7f8a9b0c1_add_face_recognition_tables.py  e7f8a9b0c1d2_add_person_faces_original_filename.py  f3eb52747698_initial_migration_create_devices_and_.py
app/: __init__.py  aggregation.py  api_schemas.py  config.py  constants.py  database.py  edge_schemas.py  features.py  health.py  inference.py  logging.py  main.py  models.py  models_meta.py  normalize.py  schemas.py  services.py  system.py  utils.py  window_pipeline.py
app/face/: __init__.py  processor.py  routes.py  schemas.py  storage.py
docs/: API.md  EDGE_DATA_SHAPE.md  README.md  configuration.md  database.md  development.md  edge-integration.md  face-recognition.md  installation.md
models/: README.md
samples/: README.md
scripts/: clear_db.py  export_dataset.py  reset_db_and_run.sh  seed_windows.py
tests/: conftest.py  test_aggregation.py  test_api_edge_cases.py  test_database.py  test_edge_aggregation.py  test_face_api.py  test_features.py  test_golden_edge.py  test_health.py  test_infer_schema.py  test_inference_rules.py  test_ingest.py  test_integration.py  test_multiple_devices.py  test_multiple_people.py  test_normalize.py  test_response_format.py  test_windows.py
(+21 files in other folders)
