[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-har"
version = "1.0.0"
description = "Cloud HAR - Human Activity Recognition API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "insightface>=0.7.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
